# solana-job-board-demo

./: Anchor.toml  README.md  package.json
programs/job-board/: Cargo.toml
programs/job-board/src/: availability_info.rs  bounty.rs  error.rs  lib.rs
tests/: job-board.ts
