[package]
name = "job-board"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "job_board"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-spl = "0.25.0"
anchor-lang = { version = "0.25.0", features=[] }
spl-account-compression = { version = "0.1.3", features=["cpi"] }
spl-noop = { version = "0.1.3", features = ["cpi"] }
spl-concurrent-merkle-tree = "0.1.1"
